force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <description>Daily, Weekly and Monthly task</description>
    <label>User Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>