force-app/main/default/objects/Task__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Bill Payments</fullName>
            </value>
            <value>
                <fullName>Sending Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>