force-app/main/default/objects/Task__c/fields/Re_assign_to__c.field-meta.xml
<CustomField>
    <fullName>Re_assign_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Re-assign to</label>
    <referenceTo>User_Master__c</referenceTo>
    <relationshipName>Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>