force-app/main/default/objects/Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Washrroom</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Rent Payment</fullName>
            </value>
            <value>
                <fullName>Pending Dues</fullName>
            </value>
            <value>
                <fullName>Electric Bill</fullName>
            </value>
            <value>
                <fullName>Water Bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>