force-app/main/default/objects/Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_User__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Deadline__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Additional_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>